# puffin

./: .gitignore  .mergify.yml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build_web.sh  check.sh  clippy.toml  deny.toml  release.toml  rust-toolchain  rust-toolchain.toml  setup_web.sh  start_server.sh  taplo.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  rust-ci.yml  typos.yml
docs/: index.html
puffin/: CHANGELOG.md  Cargo.toml  README.md  release.toml
puffin-imgui/: CHANGELOG.md  Cargo.toml  README.md  release.toml
puffin-imgui/examples/: imgui.rs
puffin-imgui/src/: lib.rs  ui.rs
puffin/benches/: benchmark.rs  compression.rs
puffin/benches/snapshots/: benchmark__compression__brotli encode.snap  benchmark__compression__gzip (flate2) encode.snap  benchmark__compression__lz4_flex encode.snap  benchmark__compression__lzma (lzma-rs) encode.snap  benchmark__compression__zstd encode.snap  benchmark__compression__zstd encode.snap.new
puffin/src/: data.rs  data_header.rs  frame_data.rs  frames_writer.rs  global_profiler.rs  lib.rs  merge.rs  profile_view.rs  scope_details.rs  thread_profiler.rs  utils.rs
puffin/tests/: create_frame_writer.rs  deserialize_serialized.rs  frame_serialization.rs  multiple_frames.rs  single_frame.rs
puffin/tests/common/: mod.rs
puffin/tests/data/: capture_PFD1.puffin  capture_PFD2.puffin  capture_PFD3.puffin  capture_PFD4.puffin  capture_PFD5.puffin
puffin_egui/: CHANGELOG.md  Cargo.toml  README.md  release.toml
puffin_egui/examples/: eframe.rs  macroquad.rs
puffin_egui/src/: filter.rs  flamegraph.rs  grid_spacing.rs  lib.rs  maybe_mut_ref.rs  stats.rs
puffin_http/: CHANGELOG.md  Cargo.toml  README.md  release.toml
puffin_http/examples/: server.rs
puffin_http/src/: client.rs  lib.rs  server.rs
puffin_tracing/: Cargo.toml  README.md
puffin_tracing/examples/: tracing.rs
puffin_tracing/src/: lib.rs
puffin_viewer/: CHANGELOG.md  Cargo.toml  README.md  release.toml
puffin_viewer/src/: lib.rs  main.rs  web.rs
supply-chain/: audits.toml  config.toml
