[package]
name = "puffin-imgui"
version = "0.14.0"
authors = ["Embark <opensource@embark-studios.com>"]
description = "ImGui GUI bindings for the Puffin profiler"
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/EmbarkStudios/puffin"
repository = "https://github.com/EmbarkStudios/puffin"
readme = "README.md"
categories = ["development-tools::profiling", "gui"]
keywords = ["profiler", "instrumentation", "gamedev"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
imgui = { version = "0.8" }
natord = "1.0.9"
puffin = { version = "0.11.0", path = "../puffin" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
glium = { version = "0.30", default-features = true }
imgui-glium-renderer = "0.8"
imgui-winit-support = { version = "0.8", default-features = false, features = [
    "winit-25",
] }
