[package]
name = "puffin-imgui"
version = "0.15.0"
authors = ["Embark <opensource@embark-studios.com>"]
description = "ImGui GUI bindings for the Puffin profiler"
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/EmbarkStudios/puffin"
repository = "https://github.com/EmbarkStudios/puffin"
readme = "README.md"
categories = ["development-tools::profiling", "gui"]
keywords = ["profiler", "instrumentation", "gamedev"]
include = ["**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
imgui = { version = "0.8" }
natord = "1.0.9"
puffin = { version = "0.13.0", path = "../puffin", features = ["packing"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# Stuck on this version until imgui-glium updates
glium = { version = "0.30", default-features = true }
imgui-glium-renderer = "0.8"
imgui-winit-support = { version = "0.8", default-features = false, features = [
    "winit-25",
] }
