[package]
name = "puffin-imgui"
version = "0.20.1"
authors = ["Embark <opensource@embark-studios.com>"]
description = "ImGui GUI bindings for the Puffin profiler"
license = "MIT OR Apache-2.0"
edition = "2018"
homepage = "https://github.com/EmbarkStudios/puffin"
repository = "https://github.com/EmbarkStudios/puffin"
readme = "README.md"
categories = ["development-tools::profiling", "gui"]
keywords = ["profiler", "instrumentation", "gamedev"]
include = ["**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
imgui = "0.10"
natord = "1.0.9"
puffin = { version = "0.14.3", path = "../puffin", features = ["packing"] }
serde = { version = "1.0", features = ["derive"] }
mint = "0.5.6"

[dev-dependencies]
glium = { version = "0.32", default-features = true }
imgui-glium-renderer = "0.10"
imgui-winit-support = { version = "0.10",  default-features = false }
