[package]
name = "puffin"
version = "0.16.0"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
description = "Simple instrumentation profiler for games"
edition = "2018"
homepage = "https://github.com/EmbarkStudios/puffin"
repository = "https://github.com/EmbarkStudios/puffin"
readme = "README.md"
categories = ["development-tools::profiling"]
keywords = ["profiler", "instrumentation", "gamedev"]
include = ["**/*.rs", "Cargo.toml", "README.md"]

[package.metadata.docs.rs]
all-features = true


[features]
default = []
packing = ["dep:bincode", "dep:parking_lot", "lz4", "serde"]

# Support lz4 compression. Fast, and lightweight dependency.
# If both `lz4` and `zstd` are enabled, lz4 will be used for compression.
lz4 = ["dep:lz4_flex"]

# Support zstd compression. Slow and big dependency, but very good compression ratio.
zstd = ["dep:zstd", "dep:ruzstd"]

# Feature for enabling loading/saving data to a binary stream and/or file.
serialization = ["packing"]

# Enable this to be able to run puffin inside a browser when compiling to wasm
web = ["instant/wasm-bindgen", "dep:js-sys"]


[dependencies]
byteorder = { version = "1.0" }
cfg-if = "1.0"
instant = { version = "0.1" }
once_cell = "1.0"

# Optional:
anyhow = { version = "1.0" }
bincode = { version = "1.3", optional = true }
lz4_flex = { version = "0.10", optional = true, default-features = false }
parking_lot = { version = "0.12", optional = true }
serde = { version = "1.0", features = ["derive", "rc"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = { version = "0.12.3", optional = true } # native only

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = true }
ruzstd = { version = "0.4.0", optional = true } # works on wasm


[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
