[package]
name = "puffin_egui"
version = "0.24.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Show puffin profiler flamegraph in-game using egui"
edition = "2018"
homepage = "https://github.com/EmbarkStudios/puffin"
repository = "https://github.com/EmbarkStudios/puffin"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["development-tools::profiling", "game-development", "gui"]
keywords = ["profiler", "gamedev", "gui"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
  "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.25.0", default-features = false }
indexmap = { version = "2.1.0", features = ["serde"] }
natord = "1.0.9"
once_cell = "1.7"
parking_lot = "0.12"
puffin = { version = "0.18.1", path = "../puffin", features = ["packing"] }
serde = { version = "1.0", features = ["derive"], optional = true }
time = { version = "0.3.17", default-features = false, features = [
  "formatting",
  "macros",
] }
vec1 = "1.8"
web-time = "0.2"

[dev-dependencies]
eframe = { version = "0.25.0", default-features = false, features = [
  "default_fonts",
  "glow",
] }

# Enable example when this dependency is updated to latest egui
# egui-macroquad = "0.12.0"
# macroquad = "0.3"
