[package]
name = "puffin_egui"
version = "0.29.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
categories = ["development-tools::profiling", "game-development", "gui"]
description = "Show puffin profiler flamegraph in-game using egui"
edition.workspace = true
homepage = "https://github.com/EmbarkStudios/puffin"
keywords = ["profiler", "gamedev", "gui"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EmbarkStudios/puffin"
rust-version.workspace = true
include = [
    "../LICENSE-APACHE",
    "../LICENSE-MIT",
    "**/*.rs",
    "Cargo.toml",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui.workspace = true
egui_extras = { workspace = true, features = ["serde"] }
indexmap.workspace = true
log.workspace = true
log-once.workspace = true
natord.workspace = true
parking_lot.workspace = true
puffin = { version = "0.19.1", path = "../puffin", features = ["packing"] }
serde = { workspace = true, optional = true }
time.workspace = true
vec1.workspace = true
web-time.workspace = true

[dev-dependencies]
eframe = { workspace = true, features = [
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
