[package]
name = "puffin_http"
version = "0.16.1"
authors = ["Embark <opensource@embark-studios.com>"]
categories = ["development-tools::profiling", "gui"]
description = "TCP server/client for puffin profiler data"
edition.workspace = true
homepage = "https://github.com/EmbarkStudios/puffin"
keywords = ["profiler", "instrumentation", "gamedev"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EmbarkStudios/puffin"
rust-version.workspace = true
include = ["**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
log = "0.4"
parking_lot = "0.12"
puffin = { version = "0.19.1", path = "../puffin", features = [
    "packing",
    "lz4",
    "serialization",
] }

[dev-dependencies]
simple_logger = "4.2"
paste = "1.0"

[lints]
workspace = true
