[package]
name = "puffin_viewer"
version = "0.22.0"
authors = ["Embark <opensource@embark-studios.com>"]
categories = ["development-tools::profiling", "gui"]
description = "Viewer GUI for puffin profiler data"
edition.workspace = true
homepage = "https://github.com/EmbarkStudios/puffin"
keywords = ["profiler", "instrumentation", "gamedev"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EmbarkStudios/puffin"
rust-version.workspace = true
include = ["**/*.rs", "Cargo.toml", "README.md", "icon.png"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
puffin_egui = { version = "0.29.0", path = "../puffin_egui", features = [
    "serde",
] }
puffin = { version = "0.19.1", path = "../puffin", features = [
    "packing",
    "serialization",
    "lz4",
    "zstd",          # Support zstd in order to load old puffin files (before 0.16.0)
] }
puffin_http = { version = "0.16.1", path = "../puffin_http" }

argh = "0.1"
eframe = { version = "0.29.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"
rfd = "0.10.0"
env_logger = "0.10"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.33"
