[package]
name = "puffin_viewer"
version = "0.22.0"
authors = ["Embark <opensource@embark-studios.com>"]
categories = ["development-tools::profiling", "gui"]
description = "Viewer GUI for puffin profiler data"
edition.workspace = true
homepage = "https://github.com/EmbarkStudios/puffin"
keywords = ["profiler", "instrumentation", "gamedev"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EmbarkStudios/puffin"
rust-version.workspace = true
include = ["**/*.rs", "Cargo.toml", "README.md", "icon.png"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wayland"]
wayland = ["eframe/wayland"]
x11 = ["eframe/x11"]

[dependencies]
puffin = { version = "0.19.1", path = "../puffin", features = [
    "packing",
    "serialization",
    "lz4",
    "zstd", # Support zstd in order to load old puffin files (before 0.16.0)
] }
puffin_egui = { version = "0.29.0", path = "../puffin_egui", features = [
    "serde",
] }
puffin_http = { version = "0.16.1", path = "../puffin_http" }

argh.workspace = true
eframe = { workspace = true, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
env_logger.workspace = true
log.workspace = true
rfd.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
